--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -14,25 +14,7 @@ secondaryLogo = "icon_rf.png"
 description = "Grow with Nature"
 
 [[params.author.links]]
-email = "mailto:mohammedswalahmsk@gmail.com?subject=Website%20Contact&body=Hi%20Mohammed,"
-
-[[params.author.links]]
-facebook = "https://www.facebook.com/profile.php?id=61551776615388"
-
-[[params.author.links]]
-instagram = "https://www.instagram.com/iam_swalah_"
-
-[[params.author.links]]
-linkedin = "https://www.linkedin.com/mohammedswalah"
-
-[[params.author.links]]
-phone = "tel:+919745503093"
-
-[[params.author.links]]
-x-twitter = "https://x.com/MSK_Swalah"
-
-[[params.author.links]]
-youtube = "https://youtube.com/@mskxplor"
+linkedin = "https://www.linkedin.com/in/mohammedswalah"
 
 ["params.author"]
 name = "Mohammed Swalah"
